--- a/Makefile.site
+++ b/Makefile.site
@@ -5,25 +5,25 @@ asdf:
 	cat .tool-versions| awk '{print $$1}' | while read -r a; do asdf list-all "$$a" | sed "s#^#$$a #"; done | sort > .tool-versions-all
 
 cache:
-	dotenv run docker build -f Dockerfile.base -t registry.fly.io/docker:defn-dev-cache-base --build-arg BUILDKIT_INLINE_CACHE=1 --build-arg IMAGE=ubuntu:20.04 $(shell cat .env | cut -d= -f1 | while read -r a; do echo --build-arg $$a; done) .
-	dotenv run docker build -f Dockerfile.tower -t registry.fly.io/docker:defn-dev-cache-tower --build-arg BUILDKIT_INLINE_CACHE=1 --build-arg IMAGE=registry.fly.io/docker:defn-dev-base $(shell cat .env | cut -d= -f1 | while read -r a; do echo --build-arg $$a; done) .
-	docker push registry.fly.io/docker:defn-dev-cache-base
-	docker push registry.fly.io/docker:defn-dev-cache-tower
+	dotenv run docker build -f Dockerfile.base -t registry.fly.io/defn:dev-cache-base --build-arg BUILDKIT_INLINE_CACHE=1 --build-arg IMAGE=ubuntu:20.04 $(shell cat .env | cut -d= -f1 | while read -r a; do echo --build-arg $$a; done) .
+	dotenv run docker build -f Dockerfile.tower -t registry.fly.io/defn:dev-cache-tower --build-arg BUILDKIT_INLINE_CACHE=1 --build-arg IMAGE=registry.fly.io/defn:dev-base $(shell cat .env | cut -d= -f1 | while read -r a; do echo --build-arg $$a; done) .
+	docker push registry.fly.io/defn:dev-cache-base
+	docker push registry.fly.io/defn:dev-cache-tower
 
 images:
 	$(MAKE) base tower push
 
 base:
-	dotenv run docker build -f Dockerfile.base -t registry.fly.io/docker:defn-dev-base --squash --cache-from registry.fly.io/docker:defn-dev-cache-base --build-arg IMAGE=ubuntu:20.04 $(shell cat .env | cut -d= -f1 | while read -r a; do echo --build-arg $$a; done) .
+	dotenv run docker build -f Dockerfile.base -t registry.fly.io/defn:dev-base --squash --cache-from registry.fly.io/defn:dev-cache-base --build-arg IMAGE=ubuntu:20.04 $(shell cat .env | cut -d= -f1 | while read -r a; do echo --build-arg $$a; done) .
 
 tower:
-	dotenv run docker build -f Dockerfile.tower -t registry.fly.io/docker:defn-dev-tower --cache-from registry.fly.io/docker:defn-dev-cache-tower --build-arg IMAGE=registry.fly.io/docker:defn-dev-base $(shell cat .env | cut -d= -f1 | while read -r a; do echo --build-arg $$a; done) .
-	dotenv run docker build -f Dockerfile.ci -t registry.fly.io/docker:defn-dev-ci --cache-from registry.fly.io/docker:defn-dev-cache-tower --build-arg IMAGE=registry.fly.io/docker:defn-dev-tower $(shell cat .env | cut -d= -f1 | while read -r a; do echo --build-arg $$a; done) .
+	dotenv run docker build -f Dockerfile.tower -t registry.fly.io/defn:dev-tower --cache-from registry.fly.io/defn:dev-cache-tower --build-arg IMAGE=registry.fly.io/defn:dev-base $(shell cat .env | cut -d= -f1 | while read -r a; do echo --build-arg $$a; done) .
+	dotenv run docker build -f Dockerfile.ci -t registry.fly.io/defn:dev-ci --cache-from registry.fly.io/defn:dev-cache-tower --build-arg IMAGE=registry.fly.io/defn:dev-tower $(shell cat .env | cut -d= -f1 | while read -r a; do echo --build-arg $$a; done) .
 
 push:
-	docker push registry.fly.io/docker:defn-dev-base
-	docker push registry.fly.io/docker:defn-dev-tower
-	docker push registry.fly.io/docker:defn-dev-ci
+	docker push registry.fly.io/defn:dev-base
+	docker push registry.fly.io/defn:dev-tower
+	docker push registry.fly.io/defn:dev-ci
 
 ci:
 	$(MAKE) test
