--- a/fly/brie.toml
+++ b/fly/brie.toml
@@ -12,8 +12,8 @@ strategy = "immediate"
 [experimental]
 allowed_public_ports = []
 auto_rollback = true
-entrypoint = ["/service"]
-cmd = []
+entrypoint = ["bash", "-c"]
+cmd = ["cd && make trigger"]
 
 [mounts]
 source = "mnt"
