ignore failures during down

--- a/Makefile.site
+++ b/Makefile.site
@@ -35,10 +35,10 @@ up:
 	~/bin/e tilt up --stream
 
 down:
-	~/bin/e bash -c 'rm -vf "$${SSH_AUTH_SOCK}"'
-	echo yes | gh auth logout --hostname github.com
-	cd fly && $(MAKE) down
-	pkill [t]ilt || true
+	-~/bin/e bash -c 'rm -vf "$${SSH_AUTH_SOCK}"'
+	-echo yes | gh auth logout --hostname github.com
+	-cd fly && $(MAKE) down
+	-pkill [t]ilt
 
 live:
 	@env SSH_AUTH_SOCK="$(shell ls -td /tmp/vscode-ssh-auth-sock-* 2>/dev/null | head -1)" ssh-add -L 2>/dev/null >/dev/null
