--- a/Makefile.site
+++ b/Makefile.site
@@ -47,7 +47,10 @@ monitor:
 	@while true; do ~/bin/e $(MAKE) monitor_inner || true; sleep 5; done
 
 monitor_inner:
-	@rm -f .dead; while true; do if ! $(MAKE) live 2>/dev/null >/dev/null; then touch .dead; for a in 1 2 3 4 5 6; do if $(MAKE) live 2>/dev/null >/dev/null; then rm -f .dead; break; fi; echo MAYBE DEAD $$a; sleep 10; done; fi; if test -f .dead; then $(MAKE) down; break; fi; echo "$$(date) live"; sleep 60; done
+	@while true; do $(MAKE) monitor_once; sleep 60; done
+
+monitor_once:
+	@rm -f .dead; if ! $(MAKE) live 2>/dev/null >/dev/null; then touch .dead; for a in 1 2 3 4 5 6; do if $(MAKE) live 2>/dev/null >/dev/null; then rm -f .dead; break; fi; echo MAYBE DEAD $$a; sleep 10; done; fi; if test -f .dead; then $(MAKE) down; break; fi; echo "$$(date) live"
 
 dev:
 	@~/bin/e pre-commit run --all
