--- a/Makefile.site
+++ b/Makefile.site
@@ -35,8 +35,9 @@ up:
 	~/bin/e tilt up --stream
 
 down:
-	-~/bin/e bash -c 'rm -vf "$${SSH_AUTH_SOCK}"'
+	-bash -c 'rm -vf "$${SSH_AUTH_SOCK}"'
 	-echo yes | gh auth logout --hostname github.com
+	-cd ~/.password-store && sudo -u ubuntu git-crypt lock
 	-cd fly && $(MAKE) down
 	-pkill [t]ilt
 
@@ -45,7 +46,7 @@ live:
 
 monitor:
 	@rm -f .dead; \
-		if ! $(MAKE) live 2>/dev/null >/dev/null; then touch .dead; for a in 1 2 3 4 5 6 7 8 9 0; do if $(MAKE) live 2>/dev/null >/dev/null; then rm -f .dead; break; fi; echo MAYBE DEAD $$a; sleep 10; done; fi; if test -f .dead; then $(MAKE) down; fi
+		if ! $(MAKE) live 2>/dev/null >/dev/null; then touch .dead; for a in 1 2 3 4 5 6 7 8 9 0; do if $(MAKE) live 2>/dev/null >/dev/null; then rm -f .dead; break; fi; echo MAYBE DEAD $$a; sleep 10; done; fi; if test -f .dead; then ~/bin/e $(MAKE) down; fi
 
 dev:
 	@~/bin/e pre-commit run --all
