--- a/Dockerfile.tower
+++ b/Dockerfile.tower
@@ -248,7 +248,7 @@ RUN bash -c 'source $HOME/.asdf/asdf.sh && asdf install doctl'
 FROM ${IMAGE} as python
 COPY --link --chown=ubuntu:ubuntu --from=asdf /home/ubuntu/.asdf /home/ubuntu/.asdf
 COPY --link --chown=ubuntu:ubuntu .tool-versions .
-RUN sudo apt update && sudo apt install -y python3-dev
+RUN sudo apt update && sudo apt install -y python3-dev libbz2-dev libssl-dev libreadline-dev
 RUN bash -c 'source $HOME/.asdf/asdf.sh && asdf plugin-add python'
 RUN bash -c 'source $HOME/.asdf/asdf.sh && asdf install python'
 
