set much larger cache size

--- a/.earthly/config.yaml
+++ b/.earthly/config.yaml
@@ -2,3 +2,4 @@ global:
   disable_analytics: true
   local_registry_host: tcp://127.0.0.1:8371
   secret_provider: earthly-secret-provider
+  cache_size_pct: 70
