command changed to api-proxy

--- a/fly/Makefile
+++ b/fly/Makefile
@@ -19,7 +19,7 @@ trigger-devcontainer:
 		EXEC:"'bash -c \"(flyctl scale --app defn count 1; while ! netcat -z defn 22; do sleep 1; done) 1>/dev/null 2>&1; socat - TCP:defn:22\"'",nofork
 
 proxy:
-	while true; do flyctl --app "$(shell flyctl apps list | grep 'fly-builder' | awk '{print $$1}' | head -1)" proxy 2377:2375; sleep 1; done
+	while true; do flyctl --app "$(shell flyctl apps list | grep 'fly-builder' | awk '{print $$1}' | head -1)" api-proxy 2377:2375; sleep 1; done
 
 up:
 	$(MAKE) start-docker
