--- a/.vscode-server/data/Machine/settings.json
+++ b/.vscode-server/data/Machine/settings.json
@@ -1,3 +1,3 @@
 {
-  "remote.SSH.defaultExtensions": ["ms-python.python"]
+  "remote.SSH.defaultExtensions": ["ms-python.python", "hashicorp.terraform"]
 }
