--- a/Makefile.site
+++ b/Makefile.site
@@ -53,7 +53,18 @@ live:
 
 monitor:
 	@rm -f .dead; \
-		if ! $(MAKE) live 2>/dev/null >/dev/null; then touch .dead; for a in 1 2 3 4 5 6 7 8 9 0; do if $(MAKE) live 2>/dev/null >/dev/null; then rm -f .dead; break; fi; echo MAYBE DEAD $$a; sleep 10; done; fi; if test -f .dead; then ~/bin/e $(MAKE) down; fi
+		if ! $(MAKE) live 2>/dev/null >/dev/null; then \
+			touch .dead; \
+			for a in 1 2 3 4 5 6 7 8 9 0; do \
+				if $(MAKE) live 2>/dev/null >/dev/null; then rm -f .dead; break; fi; \
+				echo MAYBE DEAD $$a; sleep 10; done; \
+		fi; \
+		if test -f .dead; then \
+			~/bin/e $(MAKE) down; \
+		fi; \
+		if test "$(shell find .alive -mmin +30)"; then
+			~/bin/e $(MAKE) down; \
+		fi
 
 dev:
 	@test "$(shell pass hello)" == "world"
