--- a/Makefile.site
+++ b/Makefile.site
@@ -12,8 +12,9 @@ cache:
 	dotenv run docker build -f Dockerfile.tower -t registry.fly.io/defn:dev-cache-tower --build-arg BUILDKIT_INLINE_CACHE=1 --build-arg IMAGE=registry.fly.io/defn:dev-base $(shell cat .env | cut -d= -f1 | while read -r a; do echo --build-arg $$a; done) .
 	docker push registry.fly.io/defn:dev-cache-base
 	docker push registry.fly.io/defn:dev-cache-tower
-	earthly --remote-cache=registry.fly.io/docker:cache-platform --push +warm
-	earthly --remote-cache=registry.fly.io/docker:cache-platform +warm
+	#earthly --remote-cache=registry.fly.io/docker:cache-platform --push +warm
+	#earthly --remote-cache=registry.fly.io/docker:cache-platform +warm
+	earthly +warm
 
 base:
 	dotenv run docker build -f Dockerfile.base -t registry.fly.io/defn:dev-base --squash --cache-from registry.fly.io/defn:dev-cache-base --build-arg IMAGE=ubuntu:20.04 $(shell cat .env | cut -d= -f1 | while read -r a; do echo --build-arg $$a; done) .
