--- a/Makefile.site
+++ b/Makefile.site
@@ -53,17 +53,17 @@ live:
 	@env SSH_AUTH_SOCK="$(shell ls -td /tmp/vscode-ssh-auth-sock-* 2>/dev/null | head -1)" ssh-add -L 2>/dev/null >/dev/null
 
 monitor:
-	@rm -f .dead; \
+	@rm -f ~/.dead; \
 		if ! $(MAKE) live 2>/dev/null >/dev/null; then \
-			touch .dead; \
+			touch ~/.dead; \
 			for a in 1 2 3 4 5 6 7 8 9 0; do \
-				if $(MAKE) live 2>/dev/null >/dev/null; then rm -f .dead; break; fi; \
+				if $(MAKE) live 2>/dev/null >/dev/null; then rm -f ~/.dead; break; fi; \
 				echo MAYBE DEAD $$a; sleep 10; done; \
 		fi; \
-		if test -f .dead; then \
+		if test -f ~/.dead; then \
 			~/bin/e $(MAKE) down; \
 		fi; \
-		if test "$(shell find .alive -mmin +30)"; then
+		if test -f ~/.alive && test "$(shell find ~/.alive -mmin +30)"; then
 			~/bin/e $(MAKE) down; \
 		fi
 
