wip: convertion to Earthfile

--- a/.env
+++ b/.env
@@ -24,3 +24,22 @@ DIFFT=0.28.0
 LITESTREAM=0.3.8
 NPM=8.10.0
 CDKTF=0.10.4
+SHELLCHECK=0.8.0
+SHFMT=3.5.0
+CUE=0.4.3
+KUBECTL=1.22.9
+KREW=0.4.2
+K9S=0.25.18
+K3D=5.4.1
+KUSTOMIZE=4.5.5
+HELM=3.9.0
+TILT=0.30.1
+TELEPORT-ENT=9.2.1
+VAULT=1.10.3
+CONSUL=1.12.0
+CLOUDFLARED=2022.5.1
+TERRAFORM=1.2.0
+NODEJS=16.15.0
+K3SUP=0.11.3
+DOCTL=1.75.0
+PYTHON=3.10.4
