tower is building

--- a/.env
+++ b/.env
@@ -34,7 +34,7 @@ K3D=5.4.1
 KUSTOMIZE=4.5.5
 HELM=3.9.0
 TILT=0.30.1
-TELEPORT-ENT=9.2.1
+TELEPORT=9.2.1
 VAULT=1.10.3
 CONSUL=1.12.0
 CLOUDFLARED=2022.5.1
