ignore prune errors

--- a/Makefile.site
+++ b/Makefile.site
@@ -15,8 +15,7 @@ push:
 
 clean:
 	docker images | grep none | awk '{print $$3}' | runmany 'docker rmi $$1'
-	docker system prune -f
-	docker system df
+	-docker system prune -f
 
 prune:
 	$(MAKE) clean
