us ci images for machines

--- a/fly/Dockerfile
+++ b/fly/Dockerfile
@@ -1,6 +1,4 @@
-FROM registry.fly.io/defn:dev-tower
-
-USER root
+FROM registry.fly.io/defn:dev-ci
 
 COPY service /service
 COPY buildkite-agent.cfg /etc/buildkite-agent/buildkite-agent.cfg
