--- a/Makefile.site
+++ b/Makefile.site
@@ -39,7 +39,7 @@ monitor:
 	@set -x; rm -f ~/.dead; \
 		if ! $(MAKE) live 2>/dev/null >/dev/null; then \
 			touch ~/.dead; \
-			for a in 1 2 3 4 5 6 7 8 9 0; do \
+			for a in $(seq 1 50); do \
 				if $(MAKE) live 2>/dev/null >/dev/null; then rm -f ~/.dead; break; fi; \
 				echo MAYBE DEAD $$a; sleep 10; done; \
 		fi; \
