upgrade defn/boot: v0.0.99

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,19 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.1.0
+    rev: v4.2.0
     hooks:
       - id: trailing-whitespace
+        exclude: ^(provider|cdktf.out)/|\.lock
       - id: end-of-file-fixer
+        exclude: ^(provider|cdktf.out)/|\.lock
       - id: check-json
+        exclude: ^(provider|cdktf.out)/
       - id: check-yaml
+        exclude: ^(provider|cdktf.out)/
+      - id: check-toml
+        exclude: ^(provider|cdktf.out)/
+      - id: check-shebang-scripts-are-executable
+      - id: check-executables-have-shebangs
 
   - repo: local
     hooks:
@@ -18,9 +26,8 @@ repos:
 
   - repo: local
     hooks:
-      - id: sh-fmt
-        name: sh-fmt
-        entry: shfmt -w
+      - id: pants-fmt
+        name: pants-fmt
+        entry: p --owners-not-found-behavior=ignore fmt lint check
         language: system
-        files: "^(bin/|etc/(service|hook-start))"
         pass_filenames: true
