--- a/.env
+++ b/.env
@@ -1,21 +1,21 @@
 ASDF=0.9.0
-BABASHKA=0.8.1
+BOUNDARY=0.8.1
 BKCLI=1.2.0
 BUILDKITE=3.35.2
 CDKTF=0.10.4
 CILIUM=0.11.1
-CLOUDFLARED=2022.5.1
+CLOUDFLARED=2022.5.3
 CONSUL=1.12.1
 CREDENTIAL_PASS=0.6.4
 CUE=0.4.3
 DIFFT=0.28.0
-DOCTL=1.76.1
+DOCTL=1.76.2
 EARTHLY=0.6.14
 FLYCTL=0.0.330
 GH=2.9.0
 HELM=3.9.0
 HLB=0.4.0
-HOF=0.6.2-beta.1
+HOF=0.6.2
 HUBBLE=0.9.0
 JLESS=0.8.0
 K3D=5.4.1
@@ -27,7 +27,7 @@ KUSTOMIZE=4.5.5
 LINKERD=edge-22.4.1
 LITESTREAM=0.3.8
 LOFT=2.1.8
-NODEJS=16.15.0
+NODEJS=16.15.1
 NPM=8.10.0
 POWERLINE=1.21.0
 PYTHON=3.10.4
@@ -36,7 +36,7 @@ SHFMT=3.5.0
 STEAMPIPE=0.13.6
 STEP=0.18.2
 TELEPORT=9.2.1
-TERRAFORM=1.2.1
+TERRAFORM=1.2.2
 TILT=0.30.1
 VAULT=1.10.3
 VCLUSTER=0.7.1
