prevent more than one dev from running

--- a/Makefile.site
+++ b/Makefile.site
@@ -56,6 +56,9 @@ monitor:
 		fi
 
 dev:
+	@if flock -n ~/.dev.lock -c '~/bin/e $(MAKE) dev_inner'; then rm -f ~/.dev.lock; fi
+
+dev_inner:
 	@while true; do if ~/bin/e $(MAKE) live 2>/dev/null >/dev/null; then ~/bin/e $(MAKE) up; fi; echo "$$(date) zzz"; sleep 5 ; done
 
 trigger:
